Correct styling which removes the horizontal scrollbar.

--- a/map_core/app/src/css/mapcore.css
+++ b/map_core/app/src/css/mapcore.css
@@ -104,7 +104,6 @@
 .maptab-tab-content {
   display: none;
   padding: 0px 0px;
-  border: 1px solid #ccc;
   border-top: none;
   height: 100%;
   position: absolute;
